Bug 43284 - colord fail compiling on x86
Summary: colord fail compiling on x86
Status: RESOLVED FIXED
Alias: None
Product: colord
Classification: Unclassified
Component: libcolord (show other bugs)
Version: unspecified
Hardware: x86 (IA32) Linux (All)
: medium blocker
Assignee: Richard Hughes
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-27 15:12 UTC by Kris Thomsen
Modified: 2011-11-27 23:44 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Kris Thomsen 2011-11-27 15:12:43 UTC
I was compiling colord as a part of gnome-shell jhbuild, and got this error:

-----------------

    cd-sensor-colorhug-private.c: In function 'ch_device_reply_cb':
    cd-sensor-colorhug-private.c:314:12: error: format '%li' expects argument of type 'long int', but argument 7 has type 'gsize' [-Werror=format]
    cd-sensor-colorhug-private.c:314:12: error: format '%li' expects argument of type 'long int', but argument 8 has type 'gsize' [-Werror=format]
    cc1: all warnings being treated as errors
     
    make[3]: *** [libcolord_sensor_colorhug_la-cd-sensor-colorhug-private.lo] Fejl 1
    make[3]: *** Venter pƄ uafsluttede job....
    make[3]: Forlader katalog '/home/kris/gnome-shell/source/colord/src/sensors'
    make[2]: *** [all-recursive] Fejl 1
    make[2]: Forlader katalog '/home/kris/gnome-shell/source/colord/src'
    make[1]: *** [all-recursive] Fejl 1
    make[1]: Forlader katalog '/home/kris/gnome-shell/source/colord'
    make: *** [all] Fejl 2

-------------------------------
Comment 1 Richard Hughes 2011-11-27 23:44:54 UTC
commit 3ccd51e12c697738f8cf90b495a55f2eb75eeac0
Author: Richard Hughes <richard@hughsie.com>
Date:   Mon Nov 28 07:38:09 2011 +0000

    Fix a Wformat error when printing a gsize
    
    Resolves https://bugs.freedesktop.org/show_bug.cgi?id=43284

-- can you verify please. Thanks.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.