Fix a Wformat error when printing a gsize

Resolves https://bugs.freedesktop.org/show_bug.cgi?id=43284